--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -306,83 +306,48 @@
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Location Accuracy:" lineBreakMode="tailTruncation" minimumFontSize="10" id="07a-Dx-pBC">
-                                                <rect key="frame" x="20" y="20" width="147" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="8RF-ts-ipq">
-                                                <rect key="frame" x="18" y="49" width="284" height="23"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            </slider>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="accuracy" lineBreakMode="tailTruncation" minimumFontSize="10" id="gkk-Jh-uAH">
-                                                <rect key="frame" x="175" y="20" width="70" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Video Quality:" lineBreakMode="tailTruncation" minimumFontSize="10" id="wKp-aZ-gzG">
-                                                <rect key="frame" x="20" y="79" width="106" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="2fT-U1-UVZ">
-                                                <rect key="frame" x="18" y="108" width="284" height="23"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            </slider>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="quality" lineBreakMode="tailTruncation" minimumFontSize="10" id="ZfB-kS-MW2">
-                                                <rect key="frame" x="138" y="79" width="51" height="21"/>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Location Precision Mode:" lineBreakMode="tailTruncation" minimumFontSize="10" id="07a-Dx-pBC">
+                                                <rect key="frame" x="20" y="20" width="194" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Heading System:" lineBreakMode="tailTruncation" minimumFontSize="10" id="9Qf-Pp-h4q">
-                                                <rect key="frame" x="20" y="138" width="131" height="21"/>
+                                                <rect key="frame" x="20" y="143" width="131" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="s5e-47-Chu">
-                                                <rect key="frame" x="20" y="174" width="207" height="30"/>
+                                                <rect key="frame" x="20" y="172" width="207" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <segments>
                                                     <segment title="True"/>
                                                     <segment title="Magnetic"/>
                                                 </segments>
                                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                <connections>
+                                                    <action selector="headingSelectorDidChange:" destination="2ne-Ja-Zi6" eventType="valueChanged" id="K5A-2v-8E5"/>
+                                                </connections>
                                             </segmentedControl>
                                             <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="jAj-q4-iPU">
-                                                <rect key="frame" x="20" y="240" width="79" height="27"/>
+                                                <rect key="frame" x="20" y="238" width="79" height="27"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <connections>
+                                                    <action selector="launchScreenSwitchDidChange:" destination="2ne-Ja-Zi6" eventType="valueChanged" id="hgd-BQ-s5h"/>
+                                                </connections>
                                             </switch>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Launch To Capture" lineBreakMode="tailTruncation" minimumFontSize="10" id="TCa-nD-t5j">
-                                                <rect key="frame" x="20" y="211" width="284" height="21"/>
+                                                <rect key="frame" x="20" y="209" width="284" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4ND-NJ-vtJ">
-                                                <rect key="frame" x="20" y="302" width="129" height="37"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                <state key="normal" title="Reset Defaults">
-                                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <state key="highlighted">
-                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="agC-hq-37u">
-                                                <rect key="frame" x="157" y="302" width="82" height="37"/>
+                                                <rect key="frame" x="119" y="303" width="82" height="37"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                 <state key="normal" title="Log Out">
@@ -392,7 +357,24 @@
                                                 <state key="highlighted">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="logInButtonPressed:" destination="2ne-Ja-Zi6" eventType="touchUpInside" id="k4k-s7-st4"/>
+                                                </connections>
                                             </button>
+                                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="KHJ-Dm-T7L">
+                                                <rect key="frame" x="20" y="49" width="79" height="27"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <connections>
+                                                    <action selector="locationModeSwitchDidChange:" destination="2ne-Ja-Zi6" eventType="valueChanged" id="eUi-uQ-1s3"/>
+                                                </connections>
+                                            </switch>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Turning &quot;Location Precision Mode&quot; on will increase the accuracy of the GPS but will deplete your battery significantly faster." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" minimumFontSize="10" id="zt8-xK-mYF">
+                                                <rect key="frame" x="49" y="84" width="222" height="51"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                     </view>
@@ -414,6 +396,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="headingSelector" destination="s5e-47-Chu" id="EGb-fl-rJp"/>
+                        <outlet property="launchScreenSwitch" destination="jAj-q4-iPU" id="sO2-pv-Vl4"/>
+                        <outlet property="locationModeSwitch" destination="KHJ-Dm-T7L" id="aML-Jf-bBe"/>
+                        <outlet property="logInButton" destination="agC-hq-37u" id="YrJ-21-Znv"/>
+                    </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="167" y="859"/>
@@ -475,6 +463,14 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PreferencesViewController.h"/>
             <relationships>
                 <relationship kind="action" name="doneButtonPressed:"/>
+                <relationship kind="action" name="headingSelectorDidChange:"/>
+                <relationship kind="action" name="launchScreenSwitchDidChange:"/>
+                <relationship kind="action" name="locationModeSwitchDidChange:"/>
+                <relationship kind="action" name="logInButtonPressed:"/>
+                <relationship kind="outlet" name="headingSelector" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="launchScreenSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="locationModeSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="logInButton" candidateClass="UIButton"/>
             </relationships>
         </class>
         <class className="RootViewController" superclassName="UIViewController">
